--- a/src/app/pages/pc/gate/galaxy-gate.component.css
+++ b/src/app/pages/pc/gate/galaxy-gate.component.css
@@ -1,4 +1,5 @@
 .pc_title {
+  padding-top: 500px;
   display: block;
   width: 87%;
   height: 200px;
@@ -60,6 +61,7 @@
 
 @media (max-width: 1024px) {
   .pc_title {
+    padding-top: 0px;
     width: 100%;
     height: 300px;
     margin: 0 auto;
