--- a/src/app/pages/pc/gate/galaxy-gate.component.css
+++ b/src/app/pages/pc/gate/galaxy-gate.component.css
@@ -1,6 +1,6 @@
 .pc_title {
-  padding-top: 500px;
   display: block;
+  margin-top: 100px;
   width: 87%;
   height: 200px;
   margin: 0 auto;
@@ -61,7 +61,6 @@
 
 @media (max-width: 1024px) {
   .pc_title {
-    padding-top: 0px;
     width: 100%;
     height: 300px;
     margin: 0 auto;
