--- a/src/app/pages/pc/layout/galaxy-layout.component.html
+++ b/src/app/pages/pc/layout/galaxy-layout.component.html
@@ -1,1 +1,103 @@
-<router-outlet></router-outlet>
+<!-- Display loading image while page loads -->
+<div class="page-loader"></div>
+<!-- Display loading image while page loads -->
+<div class="body">
+    <!--========== BEGIN HEADER ==========-->
+    <header id="header" class="header-main">
+        <!-- Begin Navbar -->
+        <nav id="main-navbar" class="navbar navbar-default navbar-fixed-top" role="navigation">
+            <!-- Classes: navbar-default, navbar-inverse, navbar-fixed-top, navbar-fixed-bottom, navbar-transparent. Note: If you use non-transparent navbar, set "height: 98px;" to #header -->
+            <div class="container">
+                <!-- Brand and toggle get grouped for better mobile display -->
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <a class="navbar-brand page-scroll" href="" #pageScroll>Unika</a>
+                </div>
+                <!-- Collect the nav links, forms, and other content for toggling -->
+                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                    <ul class="nav navbar-nav navbar-right">
+                        <li><a class="page-scroll" href="body">Home</a></li>
+                        <li><a class="page-scroll" href="#about-section">About</a></li>
+                        <li>
+                            <a class="page-scroll" href="#services-section">Services</a>
+                        </li>
+                        <li><a class="page-scroll" href="#portfolio-section">Works</a></li>
+                        <li><a class="page-scroll" href="#team-section">Team</a></li>
+                        <li><a class="page-scroll" href="#prices-section">Prices</a></li>
+                        <li><a class="page-scroll" href="#contact-section">Contact</a></li>
+                    </ul>
+                </div>
+                <!-- /.navbar-collapse -->
+            </div>
+            <!-- /.container -->
+        </nav>
+        <!-- End Navbar -->
+    </header>
+    <!-- ========= END HEADER =========-->
+    <router-outlet></router-outlet>
+    <!-- ========= Begin footer =========-->
+    <footer class="text-off-white">
+        <div class="footer-top">
+            <div class="container">
+                <div class="row wow bounceInLeft" data-wow-delay="0.4s">
+                    <div class="col-sm-6 col-md-4">
+                        <h4>Useful Links</h4>
+                        <ul class="imp-links">
+                            <li><a href="">About</a></li>
+                            <li><a href="">Services</a></li>
+                            <li><a href="">Press</a></li>
+                            <li><a href="">Copyright</a></li>
+                            <li><a href="">Advertise</a></li>
+                            <li><a href="">Legal</a></li>
+                        </ul>
+                    </div>
+                    <div class="col-sm-6 col-md-4">
+                        <h4>Subscribe</h4>
+                        <div id="footer_signup">
+                            <div id="email">
+                                <form id="subscribe" method="POST">
+                                    <input type="text" placeholder="Enter email address" name="email" id="address" data-validate="validate(required, email)" />
+                                    <button type="submit">Submit</button>
+                                    <span id="result" class="section-description"></span>
+                                </form>
+                            </div>
+                        </div>
+                        <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+                    </div>
+                    <div class="col-sm-12 col-md-4">
+                        <h4>Recent Tweets</h4>
+                        <div class="single-tweet">
+                            <div class="tweet-content">
+                                <span>@Unika</span> Excepteur sint occaecat cupidatat non proident
+                            </div>
+                            <div class="tweet-date">1 Hour ago</div>
+                        </div>
+                        <div class="single-tweet">
+                            <div class="tweet-content">
+                                <span>@Unika</span> Excepteur sint occaecat cupidatat non proident uku shumaru
+                            </div>
+                            <div class="tweet-date">1 Hour ago</div>
+                        </div>
+                    </div>
+                </div>
+                <!-- /.row -->
+            </div>
+            <!-- /.container -->
+        </div>
+        <div class="footer">
+            <div class="container text-center wow fadeIn" data-wow-delay="0.4s">
+                <p class="copyright"> Copyright &copy; 2015 - Designed By <a href="https://www.behance.net/poljakova" class="theme-author">Veronika Poljakova</a> &amp; Developed by <a href="http://www.imransdesign.com/" class="theme-author">Imransdesign</a>
+                </p>
+            </div>
+        </div>
+    </footer>
+    <!-- ========= End footer =========-->
+    <a href="#" class="scrolltotop"><i class="fa fa-arrow-up"></i></a>
+    <!-- Scroll to top button -->
+</div>
+<!-- body ends -->
