--- a/src/app/pages/pc/home/about/galaxy-about.component.html
+++ b/src/app/pages/pc/home/about/galaxy-about.component.html
@@ -1,28 +1,29 @@
-<section id="text-carousel-intro-section" class="parallax" data-stellar-background-ratio="0.5" style="background-image: url(assets/images/home/slider-bg.jpg)">
-  <div class="container">
-    <div class="caption text-center text-white" data-stellar-ratio="0.7">
-      <div id="owl-intro-text" class="owl-carousel">
-        <div class="item">
-          <h1>We have Awesome things</h1>
-          <p>Let's make the web beautiful together</p>
-          <div class="extra-space-l"></div>
-          <a class="btn btn-blank" href="https://creativemarket.com/Themetorium" target="_blank" role="button">View More!</a>
+<section id="text-carousel-intro-section" class="parallax" data-stellar-background-ratio="0.5">
+    <div #galaxy3dContainer></div>
+    <div class="container">
+        <div class="caption text-center text-white" data-stellar-ratio="0.7">
+            <div id="owl-intro-text" class="owl-carousel">
+                <div class="item">
+                    <h1>ENJOY OUR METAVERS</h1>
+                    <p>Let's make the metaers beautiful together</p>
+                    <div class="extra-space-l"></div>
+                    <!-- <a class="btn btn-blank" href="https://creativemarket.com/Themetorium" target="_blank" role="button">View More!</a> -->
+                </div>
+                <div class="item">
+                    <h1>NEW WORLD CONNECTION</h1>
+                    <p>Let's make the metaers beautiful together</p>
+                    <div class="extra-space-l"></div>
+                    <!-- <a class="btn btn-blank" href="https://creativemarket.com/Themetorium" target="_blank" role="button">View More!</a> -->
+                </div>
+                <div class="item">
+                    <h1>PERSONA</h1>
+                    <p>Let's go to persona planet</p>
+                    <div class="extra-space-l"></div>
+                    <!-- <a class="btn btn-blank" href="https://creativemarket.com/Themetorium" target="_blank" role="button">View More!</a> -->
+                </div>
+            </div>
         </div>
-        <div class="item">
-          <h1>Join with us</h1>
-          <p>To the greatest Journey</p>
-          <div class="extra-space-l"></div>
-          <a class="btn btn-blank" href="https://creativemarket.com/Themetorium" target="_blank" role="button">View More!</a>
-        </div>
-        <div class="item">
-          <h1>I'm Unika</h1>
-          <p>One Page Responsive Theme</p>
-          <div class="extra-space-l"></div>
-          <a class="btn btn-blank" href="https://creativemarket.com/Themetorium" target="_blank" role="button">View More!</a>
-        </div>
-      </div>
+        <!-- /.caption -->
     </div>
-    <!-- /.caption -->
-  </div>
-  <!-- /.container -->
+    <!-- /.container -->
 </section>
