--- a/src/app/pages/pc/layout/galaxy-layout.component.html
+++ b/src/app/pages/pc/layout/galaxy-layout.component.html
@@ -22,7 +22,7 @@
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav navbar-right">
                         <li><a class="page-scroll" href="body">Home</a></li>
-                        <li><a class="page-scroll" href="#about-section">About</a></li>
+                        <li><a class="page-scroll" href="#about-section">Company</a></li>
                         <li>
                             <a class="page-scroll" href="#services-section">Services</a>
                         </li>
