중간 작업(business)까지 완료

--- a/src/app/pages/pc/home/about/galaxy-about.component.html
+++ b/src/app/pages/pc/home/about/galaxy-about.component.html
@@ -7,19 +7,19 @@
                     <h1>ENJOY OUR METAVERS</h1>
                     <p>Let's make the metaers beautiful together</p>
                     <div class="extra-space-l"></div>
-                    <!-- <a class="btn btn-blank" href="https://creativemarket.com/Themetorium" target="_blank" role="button">View More!</a> -->
+                    <a class="btn btn-blank" href="http://bookae.net" target="_blank" role="button">Bookae Link!</a>
                 </div>
                 <div class="item">
                     <h1>NEW WORLD CONNECTION</h1>
                     <p>Let's make the metaers beautiful together</p>
                     <div class="extra-space-l"></div>
-                    <!-- <a class="btn btn-blank" href="https://creativemarket.com/Themetorium" target="_blank" role="button">View More!</a> -->
+                    <a class="btn btn-blank" href="http://bookae.net" target="_blank" role="button">View More!</a>
                 </div>
                 <div class="item">
                     <h1>PERSONA</h1>
                     <p>Let's go to persona planet</p>
                     <div class="extra-space-l"></div>
-                    <!-- <a class="btn btn-blank" href="https://creativemarket.com/Themetorium" target="_blank" role="button">View More!</a> -->
+                    <a class="btn btn-blank" href="http://bookae.net" target="_blank" role="button">Persnona Link!</a>
                 </div>
             </div>
         </div>
