--- a/src/app/pages/pc/home/business/galaxy-business.component.html
+++ b/src/app/pages/pc/home/business/galaxy-business.component.html
@@ -1,3 +1,118 @@
-<p>
-  galaxy-business works!
-</p>
+<section id="business-section">
+    <div id="counter-up-trigger" class="counter-up text-white" data-stellar-background-ratio="0.5" style="background-image: url(assets/images/home/star.jpeg)">
+        <div class="cover"></div>
+        <!-- Begin page header-->
+        <div class="page-header-wrapper">
+            <div class="container">
+                <div class="page-header text-center wow fadeInDown" data-wow-delay="0.4s">
+                    <h2>Business</h2>
+                    <div class="devider"></div>
+                    <p class="subtitle">Before anyone is not told</p>
+                </div>
+            </div>
+        </div>
+        <!-- End page header-->
+        <div class="rotate-box-1-wrapper">
+            <div class="container">
+                <div class="row">
+                    <div class="wow slideInLeft fact text-center">
+                        <div class="rotate-box-info">
+                            <h1>TO THE WORLD OF INFINITE CONNECT I INVITE YOU</h1>
+                            <h1>무한 컨텐츠 세상으로 당신을 초대합니다.</h1>
+                        </div>
+                    </div>
+                </div>
+                <div class="extra-space-xxl"></div>
+                <div class="row">
+                    <div class="fact col-md-6 col-sm-6 wow fadeInLeft">
+                        <div class="fact-inner">
+                            <h1>갤럭시 코퍼레이션</h1>
+                            <span class="subTitle">메타버스를 만들어가는 콘텐츠로 IP, 플랫폼, 메타버스 서비스로 비지니스를 만들어가는 집단입니다.</span>
+                        </div>
+                    </div>
+                    <div class="fact col-md-6 col-sm-6">
+                        <div class="fact-inner wow fadeInRight" data-wow-delay="0.1s">
+                            <h4>세임사이드</h4>
+                            <p class="lead">세임사이드는(BIGHIT MUSIC)은 음악에 대한 믿음, 팬들의 공감과 지지를 기반으로 언제나 새로운 길을 개척해나가는 가장 선도적인 음악 레이블입니다. 기존에 없던 세임사이드 뮤직만의 방식으로 시대를 담는 가장 상징적인 음악을 만들어 전 세계 팬들에게 올 수 있도록 노력하고 있습니다. 소속 아티스트로는 마미손, 원슈타인, 산이가 있습니다.</p>
+                            <div class="extra-space-m"></div>
+                            <div class="text-right">
+                                <a class="btn btn-default btn-lg" href="#" target="_blank" role="button">바로가기</a>
+                            </div>
+                        </div>
+                        <div class="fact-inner wow fadeInRight" data-wow-delay="0.2s">
+                            <h4>쥬피터 ENT</h4>
+                            <p class="lead">세임사이드는(BIGHIT MUSIC)은 음악에 대한 믿음, 팬들의 공감과 지지를 기반으로 언제나 새로운 길을 개척해나가는 가장 선도적인 음악 레이블입니다. 기존에 없던 세임사이드 뮤직만의 방식으로 시대를 담는 가장 상징적인 음악을 만들어 전 세계 팬들에게 올 수 있도록 노력하고 있습니다. 소속 아티스트로는 마미손, 원슈타인, 산이가 있습니다.</p>
+                            <div class="extra-space-m"></div>
+                            <div class="text-right">
+                                <a class="btn btn-default btn-lg" href="#" target="_blank" role="button">바로가기</a>
+                            </div>
+                        </div>
+                        <div class="fact-inner wow fadeInRight" data-wow-delay="0.3s">
+                            <h4>빅플레쉬</h4>
+                            <p class="lead">세임사이드는(BIGHIT MUSIC)은 음악에 대한 믿음, 팬들의 공감과 지지를 기반으로 언제나 새로운 길을 개척해나가는 가장 선도적인 음악 레이블입니다. 기존에 없던 세임사이드 뮤직만의 방식으로 시대를 담는 가장 상징적인 음악을 만들어 전 세계 팬들에게 올 수 있도록 노력하고 있습니다. 소속 아티스트로는 마미손, 원슈타인, 산이가 있습니다.</p>
+                            <div class="extra-space-m"></div>
+                            <div class="text-right">
+                                <a class="btn btn-default btn-lg" href="#" target="_blank" role="button">바로가기</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="extra-space-xl"></div>
+                <div class="row">
+                    <div class="fact col-md-6 col-sm-6 wow fadeInLeft">
+                        <div class="fact-inner">
+                            <h1>SOLUTION</h1>
+                            <span class="subTitle">갤럭시 IP와 연계되는 사업을 발전시키고 확장시킵니다.</span>
+                        </div>
+                    </div>
+                    <div class="fact col-md-6 col-sm-6">
+                        <div class="fact-inner wow fadeInRight" data-wow-delay="0.1s">
+                            <h4>은하철도 999</h4>
+                            <p class="lead">세임사이드는(BIGHIT MUSIC)은 음악에 대한 믿음, 팬들의 공감과 지지를 기반으로 언제나 새로운 길을 개척해나가는 가장 선도적인 음악 레이블입니다. 기존에 없던 세임사이드 뮤직만의 방식으로 시대를 담는 가장 상징적인 음악을 만들어 전 세계 팬들에게 올 수 있도록 노력하고 있습니다. 소속 아티스트로는 마미손, 원슈타인, 산이가 있습니다.</p>
+                            <div class="extra-space-m"></div>
+                            <div class="text-right">
+                                <a class="btn btn-default btn-lg" href="#" target="_blank" role="button">바로가기</a>
+                            </div>
+                        </div>
+                        <div class="fact-inner wow fadeInRight" data-wow-delay="0.2s">
+                            <h4>화이트홀</h4>
+                            <p class="lead">세임사이드는(BIGHIT MUSIC)은 음악에 대한 믿음, 팬들의 공감과 지지를 기반으로 언제나 새로운 길을 개척해나가는 가장 선도적인 음악 레이블입니다. 기존에 없던 세임사이드 뮤직만의 방식으로 시대를 담는 가장 상징적인 음악을 만들어 전 세계 팬들에게 올 수 있도록 노력하고 있습니다. 소속 아티스트로는 마미손, 원슈타인, 산이가 있습니다.</p>
+                            <div class="extra-space-m"></div>
+                            <div class="text-right">
+                                <a class="btn btn-default btn-lg" href="#" target="_blank" role="button">바로가기</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="extra-space-xl"></div>
+                <div class="row">
+                    <div class="fact col-md-6 col-sm-6">
+                        <div class="fact-inner wow fadeInLeft">
+                            <h1>MAGAZINE</h1>
+                            <span class="subTitle">갤럭시의 메타버스의 최신정보를 공유합니다.</span>
+                        </div>
+                    </div>
+                    <div class="fact col-md-6 col-sm-6">
+                        <div class="fact-inner wow fadeInRight" data-wow-delay="0.1s">
+                            <h4>유라보네이션</h4>
+                            <p class="lead">세임사이드는(BIGHIT MUSIC)은 음악에 대한 믿음, 팬들의 공감과 지지를 기반으로 언제나 새로운 길을 개척해나가는 가장 선도적인 음악 레이블입니다. 기존에 없던 세임사이드 뮤직만의 방식으로 시대를 담는 가장 상징적인 음악을 만들어 전 세계 팬들에게 올 수 있도록 노력하고 있습니다. 소속 아티스트로는 마미손, 원슈타인, 산이가 있습니다.</p>
+                            <div class="extra-space-m"></div>
+                            <div class="text-right">
+                                <a class="btn btn-default btn-lg" href="#" target="_blank" role="button">바로가기</a>
+                            </div>
+                        </div>
+                        <div class="fact-inner wow fadeInRight" data-wow-delay="0.2s">
+                            <h4>유니트맨션</h4>
+                            <p class="lead">세임사이드는(BIGHIT MUSIC)은 음악에 대한 믿음, 팬들의 공감과 지지를 기반으로 언제나 새로운 길을 개척해나가는 가장 선도적인 음악 레이블입니다. 기존에 없던 세임사이드 뮤직만의 방식으로 시대를 담는 가장 상징적인 음악을 만들어 전 세계 팬들에게 올 수 있도록 노력하고 있습니다. 소속 아티스트로는 마미손, 원슈타인, 산이가 있습니다.</p>
+                            <div class="extra-space-m"></div>
+                            <div class="text-right">
+                                <a class="btn btn-default btn-lg" href="#" target="_blank" role="button">바로가기</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- /.container -->
+    </div>
+</section>
