--- a/src/app/pages/pc/home/intro/galaxy-company.component.html
+++ b/src/app/pages/pc/home/intro/galaxy-company.component.html
@@ -1,9 +1,9 @@
-<section id="about-section" class="page bg-style1">
+<section id="company-section" class="page bg-style1">
     <!-- Begin page header-->
     <div class="page-header-wrapper">
         <div class="container">
             <div class="page-header text-center wow fadeInUp" data-wow-delay="0.3s">
-                <h2 style="color: white;">Compnay</h2>
+                <h2>Compnay</h2>
                 <div class="devider"></div>
                 <p class="subtitle">little information</p>
             </div>
@@ -15,38 +15,48 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12 col-sm-6">
-                    <a href="#" class="rotate-box-1 square-icon wow zoomIn" data-wow-delay="0">
-                        <div class="rotate-box-info" class="col-md-8" style="color: white;">
+                    <div class="rotate-box-1 square-icon wow slideInLeft" data-wow-delay="0">
+                        <div class="rotate-box-info" class="col-md-8">
                             <h1>WE CREATE METARVERS</h1>
                             <h3>새로운 메타버스의 시대, 갤럭시 코레퍼레이션은 즐거운 세상을 만들고 누구나가 꿈을 이룰수 있는 새로운 세계를 만들어 나갑니다.</h3>
                         </div>
-                        <div class="col-md-4" #target></div>
-                    </a>
+                        <div class="col-md-4">
+                            <app-xyz></app-xyz>
+                        </div>
+                    </div>
                 </div>
                 <div class="col-md-12 col-sm-6">
-                    <a href="#" class="rotate-box-1 square-icon wow zoomIn" data-wow-delay="0">
-                        <div class="rotate-box-info" class="col-md-8" style="color: white;">
+                    <div class="rotate-box-1 square-icon wow slideInRight" data-wow-delay="0">
+                        <div class="rotate-box-info" class="col-md-8">
                             <h1>NEW WORLD CONNECTION</h1>
                             <h3>우리가 만든 페르소나 별속에서 무한 콘텐츠 세상을 연결하고, 우리의 IP들이 다양한 비지니스로 연결하여 메타버스 통합 허브를 만들어가고 있습니다.</h3>
                         </div>
-                        <div class="col-md-4" #target></div>
-                    </a>
+                        <div class="col-md-4">
+                            <app-xyz></app-xyz>
+                        </div>
+                    </div>
                 </div>
                 <div class="col-md-12 col-sm-6">
-                    <a href="#" class="rotate-box-1 square-icon wow zoomIn" data-wow-delay="0.4s">
-                        <div class="rotate-box-info" class="col-md-8" style="color: white;">
-                            <h1>Why We Do It?</h1>
-                            <h3> Lorem ipsum dolor sit amet set, consectetur utes anet adipisicing elit, sed do eiusmod tempor incidist. </h3>
+                    <div class="rotate-box-1 square-icon wow zoomIn" data-wow-delay="0.4s">
+                        <div class="rotate-box-info" class="col-md-8">
+                            <h1>INSPIRE PERSONA</h1>
+                            <h3>온라인과 오프라인으로 연결되는 IP를 디지털 트윈을 통해 우리가 온오프라인을 편하게 움직일 수 있는 개체를 만들어냅니다.</h3>
                         </div>
-                    </a>
+                        <div class="col-md-4">
+                            <app-xyz></app-xyz>
+                        </div>
+                    </div>
                 </div>
                 <div class="col-md-12 col-sm-6">
-                    <a href="#" class="rotate-box-1 square-icon wow zoomIn" data-wow-delay="0.6s">
-                        <div class="rotate-box-info" class="col-md-8" style="color: white;">
-                            <h1>Since When?</h1>
-                            <h3> Lorem ipsum dolor sit amet set, consectetur utes anet adipisicing elit, sed do eiusmod tempor incidist. </h3>
+                    <div class="rotate-box-1 square-icon wow zoomIn" data-wow-delay="0.6s">
+                        <div class="rotate-box-info" class="col-md-8">
+                            <h1>CULTURE CREATION</h1>
+                            <h3>다 우리가 만든 메타버스의 세상속에 갤럭시의 IP와 새로운 세사을 만들어 무엇이든 이루어지는 세계를 같이합니다.</h3>
                         </div>
-                    </a>
+                        <div class="col-md-4">
+                            <img src="../../../../../assets/images/home/temp_gif.gif"/>
+                        </div>
+                    </div>
                 </div>
             </div>
             <!-- /.row -->
@@ -55,63 +65,4 @@
     </div>
     <!-- End rotate box-1 -->
     <div class="extra-space-l"></div>
-    <!-- Begin page header-->
-    <div class="page-header-wrapper">
-        <div class="container">
-            <div class="page-header text-center wow fadeInUp" data-wow-delay="0.3s">
-                <h4>Our Skills</h4>
-            </div>
-        </div>
-    </div>
-    <!-- End page header-->
-    <!-- Begin Our Skills -->
-    <div class="our-skills">
-        <div class="container">
-            <div class="row">
-                <div class="col-sm-6">
-                    <div class="skill-bar wow slideInLeft" data-wow-delay="0.2s">
-                        <div class="progress-lebel">
-                            <h6>Photoshop & Illustrator</h6>
-                        </div>
-                        <div class="progress">
-                            <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%"></div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-sm-6">
-                    <div class="skill-bar wow slideInRight" data-wow-delay="0.2s">
-                        <div class="progress-lebel">
-                            <h6>WordPress</h6>
-                        </div>
-                        <div class="progress">
-                            <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100" style="width: 85%"></div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-sm-6">
-                    <div class="skill-bar wow slideInLeft" data-wow-delay="0.4s">
-                        <div class="progress-lebel">
-                            <h6>Html & Css</h6>
-                        </div>
-                        <div class="progress">
-                            <div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100" style="width: 95%"></div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-sm-6">
-                    <div class="skill-bar wow slideInRight" data-wow-delay="0.4s">
-                        <div class="progress-lebel">
-                            <h6>Javascript</h6>
-                        </div>
-                        <div class="progress">
-                            <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width: 70%"></div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <!-- /.row -->
-        </div>
-        <!-- /.container -->
-    </div>
-    <!-- End Our Skill -->
 </section>
