--- a/src/app/pages/pc/home/careers/galaxy-careers.component.html
+++ b/src/app/pages/pc/home/careers/galaxy-careers.component.html
@@ -1,3 +1,56 @@
-<p>
-  galaxy-careers works!
-</p>
+<section id="contact-section" class="page text-white parallax" data-stellar-background-ratio="0.5" style="background-image: url(assets/images/home/map-bg.jpg)">
+  <div class="cover"></div>
+  <!-- Begin page header-->
+  <div class="page-header-wrapper">
+      <div class="container">
+          <div class="page-header text-center wow fadeInDown" data-wow-delay="0.4s">
+              <h2>Contacts</h2>
+              <div class="devider"></div>
+              <p class="subtitle">All to contact us</p>
+          </div>
+      </div>
+  </div>
+  <!-- End page header-->
+  <div class="contact wow bounceInRight" data-wow-delay="0.4s">
+      <div class="container">
+          <div class="row">
+              <div class="col-sm-6">
+                  <div class="contact-info">
+                      <h4>Our Address</h4>
+                      <ul class="contact-address">
+                          <li>
+                              <i class="fa fa-map-marker fa-lg"></i>&nbsp; 100 Limpbiscayne Blvd. (North) 17st Floor ,<br /><br />&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; New World Tower New York ,<br /><br />&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; New York, USA, 33148
+                          </li>
+                          <li><i class="fa fa-phone"></i>&nbsp; 1 -234 -456 -7890</li>
+                          <li><i class="fa fa-print"></i>&nbsp; 1 -234 -456 -7890</li>
+                          <li><i class="fa fa-envelope"></i> info@yourdomain.com</li>
+                          <li><i class="fa fa-skype"></i> Unika-Design</li>
+                      </ul>
+                  </div>
+              </div>
+              <div class="col-sm-6">
+                  <div class="contact-form">
+                      <h4>Write to us</h4>
+                      <form role="form">
+                          <div class="form-group">
+                              <input type="text" class="form-control input-lg" placeholder="Your Name" required />
+                          </div>
+                          <div class="form-group">
+                              <input type="email" class="form-control input-lg" placeholder="E-mail" required />
+                          </div>
+                          <div class="form-group">
+                              <input type="text" class="form-control input-lg" placeholder="Subject" required />
+                          </div>
+                          <div class="form-group">
+                              <textarea class="form-control input-lg" rows="5" placeholder="Message" required></textarea>
+                          </div>
+                          <button type="submit" class="btn wow bounceInRight" data-wow-delay="0.8s"> Send </button>
+                      </form>
+                  </div>
+              </div>
+          </div>
+          <!-- /.row -->
+      </div>
+      <!-- /.container -->
+  </div>
+</section>
