--- a/src/app/pages/pc/home/ip/galaxy-ip.component.html
+++ b/src/app/pages/pc/home/ip/galaxy-ip.component.html
@@ -1,130 +1,63 @@
-<section id="portfolio-section" class="page bg-style1">
-  <div class="container">
-    <div class="row">
-      <div class="col-md-12">
-        <div class="portfolio">
-          <!-- Begin page header-->
-          <div class="page-header-wrapper">
-            <div class="container">
-              <div class="page-header text-center wow fadeInDown" data-wow-delay="0.4s">
-                <h2>Our Works</h2>
-                <div class="devider"></div>
-                <p class="subtitle">What we are proud of</p>
-              </div>
+<section id="galaxy-ip-section" class="page bg-style1">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12">
+                <div class="portfolio">
+                    <!-- Begin page header-->
+                    <div class="page-header-wrapper">
+                        <div class="container">
+                            <div class="page-header text-center wow fadeInDown" data-wow-delay="0.4s">
+                                <h2>Our Works</h2>
+                                <div class="devider"></div>
+                                <p class="subtitle">What we are proud of</p>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- End page header-->
+                    <div class="portfolio_content_area">
+                        <div class="portfolio_content">
+                            <div class="row" id="portfolio">
+                                <div class="col-xs-12 col-sm-4 wow fadeInUp">
+                                    <div class="portfolio_single_content">
+                                        <img src="assets/images/home/portfolio/z_dabi.png" alt="title" />
+                                        <div>
+                                            <a href="assets/images/home/portfolio/z_dabi_detail.jpeg" data-lightbox="portfolio" class="link-preview"><i class="ion-android-archive"></i> QUADDURUP</a>
+                                            <span>파워풀한 댄스와 눈웃음이 매력적인 QDR입니다.</span>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-xs-12 col-sm-4 wow fadeInUp" data-wow-delay="0.1s">
+                                    <div class="portfolio_single_content">
+                                        <img src="assets/images/home/portfolio/z_insoon.png" alt="title" />
+                                        <div>
+                                            <a href="assets/images/home/portfolio/z_insoon_detail.jpeg" data-lightbox="portfolio" class="link-preview"><i class="ion-android-attach"></i> QUADDURUP</a>
+                                            <span>파워풀한 댄스와 눈웃음이 매력적인 QDR입니다.</span>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-xs-12 col-sm-4 wow fadeInUp" data-wow-delay="0.2s">
+                                    <div class="portfolio_single_content">
+                                        <img src="assets/images/home/portfolio/z_mommyson.png" alt="title" />
+                                        <div>
+                                            <a href="assets/images/home/portfolio/z_mommyson_detail.jpeg" data-lightbox="portfolio" class="link-preview"><i class="ion-android-camera"></i> QUADDURUP</a>
+                                            <span>파워풀한 댄스와 눈웃음이 매력적인 QDR입니다.</span>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-xs-12 col-sm-4 wow fadeInUp" data-wow-delay="0.3s">
+                                    <div class="portfolio_single_content">
+                                        <img src="assets/images/home/portfolio/z_zzuadu.png" alt="title" />
+                                        <div>
+                                            <a href="assets/images/home/portfolio/z_zzuadu_detail.jpeg" data-lightbox="portfolio" class="link-preview"><i class="ion-android-chat"></i> QUADDURUP</a>
+                                            <span>파워풀한 댄스와 눈웃음이 매력적인 QDR입니다.</span>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
-          </div>
-          <!-- End page header-->
-          <div class="portfoloi_content_area">
-            <div class="portfolio_menu" id="filters">
-              <ul>
-                <li class="active_prot_menu">
-                  <a href="#porfolio_menu" data-filter="*">all</a>
-                </li>
-                <li>
-                  <a href="#porfolio_menu" data-filter=".websites">websites</a>
-                </li>
-                <li>
-                  <a href="#porfolio_menu" data-filter=".webDesign">web design</a>
-                </li>
-                <li>
-                  <a href="#porfolio_menu" data-filter=".appsDevelopment">apps development</a>
-                </li>
-                <li>
-                  <a href="#porfolio_menu" data-filter=".GraphicDesign">graphic design</a>
-                </li>
-                <li>
-                  <a href="#porfolio_menu" data-filter=".responsive">responsive</a>
-                </li>
-              </ul>
-            </div>
-            <div class="portfolio_content">
-              <div class="row" id="portfolio">
-                <div class="col-xs-12 col-sm-4 appsDevelopment">
-                  <div class="portfolio_single_content">
-                    <img src="assets/images/home/portfolio/p1.jpg" alt="title" />
-                    <div>
-                      <a href="#">Skull Awesome</a>
-                      <span>Subtitle</span>
-                    </div>
-                  </div>
-                </div>
-                <div class="col-xs-12 col-sm-4 GraphicDesign">
-                  <div class="portfolio_single_content">
-                    <img src="assets/images/home/portfolio/p2.jpg" alt="title" />
-                    <div>
-                      <a href="#">Photo Frame</a>
-                      <span>Subtitle</span>
-                    </div>
-                  </div>
-                </div>
-                <div class="col-xs-12 col-sm-4 responsive">
-                  <div class="portfolio_single_content">
-                    <img src="assets/images/home/portfolio/p3.jpg" alt="title" />
-                    <div>
-                      <a href="#">Hand Shots</a>
-                      <span>Subtitle</span>
-                    </div>
-                  </div>
-                </div>
-                <div class="col-xs-12 col-sm-4 webDesign websites">
-                  <div class="portfolio_single_content">
-                    <img src="assets/images/home/portfolio/p4.jpg" alt="title" />
-                    <div>
-                      <a href="#">Night Abstract</a>
-                      <span>Subtitle</span>
-                    </div>
-                  </div>
-                </div>
-                <div class="col-xs-12 col-sm-4 appsDevelopment websites">
-                  <div class="portfolio_single_content">
-                    <img src="assets/images/home/portfolio/p5.jpg" alt="title" />
-                    <div>
-                      <a href="#">Joy of Independence</a>
-                      <span>Subtitle</span>
-                    </div>
-                  </div>
-                </div>
-                <div class="col-xs-12 col-sm-4 GraphicDesign">
-                  <div class="portfolio_single_content">
-                    <img src="assets/images/home/portfolio/p6.jpg" alt="title" />
-                    <div>
-                      <a href="#">Night Crawlers</a>
-                      <span>Subtitle</span>
-                    </div>
-                  </div>
-                </div>
-                <div class="col-xs-12 col-sm-4 responsive">
-                  <div class="portfolio_single_content">
-                    <img src="assets/images/home/portfolio/p7.jpg" alt="title" />
-                    <div>
-                      <a href="#">Last Motel</a>
-                      <span>Subtitle</span>
-                    </div>
-                  </div>
-                </div>
-                <div class="col-xs-12 col-sm-4 GraphicDesign">
-                  <div class="portfolio_single_content">
-                    <img src="assets/images/home/portfolio/p8.jpg" alt="title" />
-                    <div>
-                      <a href="#">Dirk Road</a>
-                      <span>Subtitle</span>
-                    </div>
-                  </div>
-                </div>
-                <div class="col-xs-12 col-sm-4 websites">
-                  <div class="portfolio_single_content">
-                    <img src="assets/images/home/portfolio/p9.jpg" alt="title" />
-                    <div>
-                      <a href="#">Old is Gold</a>
-                      <span>Subtitle</span>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
         </div>
-      </div>
     </div>
-  </div>
 </section>
