--- a/src/app/pages/pc/layout/galaxy-layout.component.html
+++ b/src/app/pages/pc/layout/galaxy-layout.component.html
@@ -21,15 +21,11 @@
                 <!-- Collect the nav links, forms, and other content for toggling -->
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav navbar-right">
-                        <li><a class="page-scroll" href="body">Home</a></li>
-                        <li><a class="page-scroll" href="#about-section">Company</a></li>
-                        <li>
-                            <a class="page-scroll" href="#services-section">Services</a>
-                        </li>
-                        <li><a class="page-scroll" href="#portfolio-section">Works</a></li>
-                        <li><a class="page-scroll" href="#team-section">Team</a></li>
-                        <li><a class="page-scroll" href="#prices-section">Prices</a></li>
-                        <li><a class="page-scroll" href="#contact-section">Contact</a></li>
+                        <li><a class="page-scroll" href="#company-section">Company</a></li>
+                        <li><a class="page-scroll" href="#galaxy-ip-section">GALAXY IP</a></li>
+                        <li><a class="page-scroll" href="#business-section">BUSINESS</a></li>
+                        <li><a class="page-scroll" href="#social-section">SOCIAL</a></li>
+                        <li><a class="page-scroll" href="#contact-section">CAREERS</a></li>
                     </ul>
                 </div>
                 <!-- /.navbar-collapse -->
@@ -42,57 +38,9 @@
     <router-outlet></router-outlet>
     <!-- ========= Begin footer =========-->
     <footer class="text-off-white">
-        <div class="footer-top">
-            <div class="container">
-                <div class="row wow bounceInLeft" data-wow-delay="0.4s">
-                    <div class="col-sm-6 col-md-4">
-                        <h4>Useful Links</h4>
-                        <ul class="imp-links">
-                            <li><a href="">About</a></li>
-                            <li><a href="">Services</a></li>
-                            <li><a href="">Press</a></li>
-                            <li><a href="">Copyright</a></li>
-                            <li><a href="">Advertise</a></li>
-                            <li><a href="">Legal</a></li>
-                        </ul>
-                    </div>
-                    <div class="col-sm-6 col-md-4">
-                        <h4>Subscribe</h4>
-                        <div id="footer_signup">
-                            <div id="email">
-                                <form id="subscribe" method="POST">
-                                    <input type="text" placeholder="Enter email address" name="email" id="address" data-validate="validate(required, email)" />
-                                    <button type="submit">Submit</button>
-                                    <span id="result" class="section-description"></span>
-                                </form>
-                            </div>
-                        </div>
-                        <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
-                    </div>
-                    <div class="col-sm-12 col-md-4">
-                        <h4>Recent Tweets</h4>
-                        <div class="single-tweet">
-                            <div class="tweet-content">
-                                <span>@Unika</span> Excepteur sint occaecat cupidatat non proident
-                            </div>
-                            <div class="tweet-date">1 Hour ago</div>
-                        </div>
-                        <div class="single-tweet">
-                            <div class="tweet-content">
-                                <span>@Unika</span> Excepteur sint occaecat cupidatat non proident uku shumaru
-                            </div>
-                            <div class="tweet-date">1 Hour ago</div>
-                        </div>
-                    </div>
-                </div>
-                <!-- /.row -->
-            </div>
-            <!-- /.container -->
-        </div>
         <div class="footer">
             <div class="container text-center wow fadeIn" data-wow-delay="0.4s">
-                <p class="copyright"> Copyright &copy; 2015 - Designed By <a href="https://www.behance.net/poljakova" class="theme-author">Veronika Poljakova</a> &amp; Developed by <a href="http://www.imransdesign.com/" class="theme-author">Imransdesign</a>
-                </p>
+                <p class="copyright"> Copyright &copy; 2021 - All Right <a href="#" class="theme-author">GALAXY Corp</a> Reserved.</p>
             </div>
         </div>
     </footer>
