새로운 기획서 적용 진행중

--- a/src/app/pages/pc/home/about/galaxy-about.component.html
+++ b/src/app/pages/pc/home/about/galaxy-about.component.html
@@ -5,21 +5,15 @@
             <div id="owl-intro-text" class="owl-carousel">
                 <div class="item">
                     <h1>ENJOY OUR METAVERS</h1>
-                    <p>Let's make the metaers beautiful together</p>
-                    <div class="extra-space-l"></div>
-                    <a class="btn btn-blank" href="http://bookae.net" target="_blank" role="button">Bookae Link!</a>
+                    <a class="btn btn-blank" href="http://bookae.net" target="_blank" role="button"><img src="assets/images/home/main/main_who_we_are_m.png" width="67%"/></a>
                 </div>
                 <div class="item">
-                    <h1>NEW WORLD CONNECTION</h1>
-                    <p>Let's make the metaers beautiful together</p>
-                    <div class="extra-space-l"></div>
-                    <a class="btn btn-blank" href="http://bookae.net" target="_blank" role="button">View More!</a>
+                    <h1>PERSONA UNIVERSE</h1>
+                    <a class="btn btn-blank" href="http://bookae.net" target="_blank" role="button"><img src="assets/images/home/main/main_our_persona_m.png" width="67%"/></a>
                 </div>
                 <div class="item">
-                    <h1>PERSONA</h1>
-                    <p>Let's go to persona planet</p>
-                    <div class="extra-space-l"></div>
-                    <a class="btn btn-blank" href="http://bookae.net" target="_blank" role="button">Persnona Link!</a>
+                    <h1>WITH US TO INFINITY</h1>
+                    <a class="btn btn-blank" href="http://bookae.net" target="_blank" role="button"><img src="assets/images/home/main/main_what_we_do_m.png" width="67%"/></a>
                 </div>
             </div>
         </div>
