--- a/src/app/pages/pc/home/intro/galaxy-company.component.html
+++ b/src/app/pages/pc/home/intro/galaxy-company.component.html
@@ -3,8 +3,8 @@
     <div class="page-header-wrapper">
         <div class="container">
             <div class="page-header text-center wow fadeInUp" data-wow-delay="0.3s">
-                <h2>Compnay</h2>
-                <div class="devider"></div>
+                <img src="assets/images/home/company/devide_company.png" />
+                <p class="devide_sub"><img src="assets/images/home/company/devide_company_sub.png" /></p>
             </div>
         </div>
     </div>
@@ -13,48 +13,60 @@
     <div class="rotate-box-1-wrapper">
         <div class="container">
             <div class="row">
-                <div class="rotate-fact col-md-12 col-sm-12 wow slideInLeft" data-wow-delay="0.1s">
-                    <div class="rotate-box-1 square-icon col-md-8 col-sm-6">
-                        <div class="fact-inner">
-                            <h2>WE CREATE METARVERS</h2>
+                <div class="rotate-fact-start col-md-12 col-sm-12 wow slideInLeft" data-wow-delay="0.1s">
+                    <div class="rotate-box-1 square-icon ">
+                        <div class="fact-header col-md-12 col-sm-12">
+                            <h1>WE CREATE</h1>
+                            <h1>METARVERS</h1>
+                        </div>
+                        <div class="fact-inner col-md-8 col-sm-6">
                             <span class="subTitle">새로운 메타버스의 시대, 갤럭시 코레퍼레이션은 즐거운 세상을 만들고 누구나가 꿈을 이룰수 있는 새로운 세계를 만들어 나갑니다.</span>
                         </div>
-                    </div>
-                    <div class="fact col-md-4 col-sm-6">
-                        <img width="100%" src="../../../../../assets/images/home/motion_1.gif"/>
+                        <div class="col-md-4 col-sm-6">
+                            <img width="100%" src="../../../../../assets/images/home/motion_1.gif" />
+                        </div>
                     </div>
                 </div>
                 <div class="rotate-fact col-md-12 col-sm-6 wow slideInRight" data-wow-delay="0.2s">
-                    <div class="rotate-box-1 square-icon col-md-8 col-sm-6">
-                        <div class="fact-inner">
-                            <h2>NEW WORLD CONNECTION</h2>
-                            <span class="subTitle">우리가 만든 페르소나 별속에서 무한 콘텐츠 세상을 연결하고, 우리의 IP들이 다양한 비지니스로 연결하여 메타버스 통합 허브를 만들어가고 있습니다.</span>
+                    <div class="rotate-box-1 square-icon ">
+                        <div class="fact-header col-md-12 col-sm-12">
+                            <h1>NEW WORLD</h1>
+                            <h1>CONNECTION</h1>
                         </div>
-                    </div>
-                    <div class="fact col-md-4 col-sm-6">
-                        <img width="100%" src="../../../../../assets/images/home/motion_2.gif"/>
+                        <div class="fact-inner col-md-8 col-sm-6">
+                            <span class="subTitle">우리가 만든 페르소나 별속에서 무한한 콘텐츠 세상을 연결하고 우리의 IP들이 다양한 비즈니스로 연결되어 메타버스 통합 허브를 만들어 가고 있습니다.</span>
+                        </div>
+                        <div class="col-md-4 col-sm-6">
+                            <img width="100%" src="../../../../../assets/images/home/motion_2.gif" />
+                        </div>
                     </div>
                 </div>
                 <div class="rotate-fact col-md-12 col-sm-6 wow zoomIn" data-wow-delay="0.3s">
-                    <div class="rotate-box-1 square-icon col-md-8 col-sm-6">
-                        <div class="fact-inner">
-                            <h1>INSPIRE PERSONA</h1>
-                            <span class="subTitle">온라인과 오프라인으로 연결되는 IP를 디지털 트윈을 통해 우리가 온오프라인을 편하게 움직일 수 있는 개체를 만들어냅니다.</span>
+                    <div class="rotate-box-1 square-icon ">
+                        <div class="fact-header col-md-12 col-sm-12">
+                            <h1>INSPIRE</h1>
+                            <h1>PERSONA</h1>
                         </div>
-                    </div>
-                    <div class="fact col-md-4 col-sm-6">
-                        <img width="100%" src="../../../../../assets/images/home/motion_3.gif"/>
+                        <div class="fact-inner col-md-8 col-sm-6">
+                            <span class="subTitle">온라인과 오프라인으로 연결되는 IP를 디지털 트윈을 통해 우리가 온오프라인으로 편하게 움직일수 있는 개체를 만들어냅니다.</span>
+                        </div>
+                        <div class="col-md-4 col-sm-6">
+                            <img width="100%" src="../../../../../assets/images/home/motion_3.gif" />
+                        </div>
                     </div>
                 </div>
                 <div class="rotate-fact col-md-12 col-sm-6 wow zoomIn" data-wow-delay="0.4s">
-                    <div class="rotate-box-1 square-icon col-md-8 col-sm-6" >
-                        <div class="fact-inner">
-                            <h2>CULTURE CREATION</h2>
-                            <span class="subTitle">다 우리가 만든 메타버스의 세상속에 갤럭시의 IP와 새로운 세사을 만들어 무엇이든 이루어지는 세계를 같이합니다.</span>
+                    <div class="rotate-box-1 square-icon ">
+                        <div class="fact-header col-md-12 col-sm-12">
+                            <h1>CULTURE</h1>
+                            <h1>CREATION</h1>
                         </div>
-                    </div>
-                    <div class="fact col-md-4 col-sm-6">
-                        <img width="100%" src="../../../../../assets/images/home/motion_4.gif"/>
+                        <div class="fact-inner col-md-8 col-sm-6">
+                            <span class="subTitle">우리가 만든 메타버스의 세상 속에 갤럭시의 IP가 새로운 세상을 만들어 무엇이든 이루어지는 세계를 같이합니다.</span>
+                        </div>
+                        <div class="col-md-4 col-sm-6">
+                            <img width="100%" src="../../../../../assets/images/home/motion_4.gif" />
+                        </div>
                     </div>
                 </div>
             </div>
