--- a/src/app/pages/pc/layout/galaxy-layout.component.html
+++ b/src/app/pages/pc/layout/galaxy-layout.component.html
@@ -19,13 +19,12 @@
                     <a class="navbar-brand page-scroll" href="" #pageScroll>Unika</a>
                 </div>
                 <!-- Collect the nav links, forms, and other content for toggling -->
-                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <div class="collapse navbar-collapse text-center" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav navbar-right">
-                        <li><a class="page-scroll" href="#company-section">Company</a></li>
-                        <li><a class="page-scroll" href="#galaxy-ip-section">GALAXY IP</a></li>
-                        <li><a class="page-scroll" href="#business-section">BUSINESS</a></li>
-                        <li><a class="page-scroll" href="#social-section">SOCIAL</a></li>
-                        <li><a class="page-scroll" href="#contact-section">CAREERS</a></li>
+                        <li><a class="page-scroll" href="#company-section"><img src="assets/images/home/header/icon_company.png"></a></li>
+                        <li><a class="page-scroll" href="#galaxy-ip-section"><img src="assets/images/home/header/icon_ip.png"></a></li>
+                        <li><a class="page-scroll" href="#business-section"><img src="assets/images/home/header/icon_business.png"></a></li>
+                        <li><a class="page-scroll" href="#contact-section"><img src="assets/images/home/header/icon_contact.png"></a></li>
                     </ul>
                 </div>
                 <!-- /.navbar-collapse -->
