glb 옆에 붙는것 잡업 진행

--- a/src/app/pages/pc/home/careers/galaxy-careers.component.html
+++ b/src/app/pages/pc/home/careers/galaxy-careers.component.html
@@ -19,8 +19,8 @@
                     </div>
                 </div>
                 <div class="col-sm-6">
-                    <div class="contact-form">
-                        <img width="100%" src="../../../../../assets/images/home/motion_2.gif" />
+                    <div class="contact-form" #contactForm>
+                        <app-connection [contactFormElement]="contactFormElement"></app-connection>
                     </div>
                 </div>
             </div>
