--- a/src/app/pages/pc/home/intro/galaxy-company.component.html
+++ b/src/app/pages/pc/home/intro/galaxy-company.component.html
@@ -22,8 +22,8 @@
                         <div class="fact-inner col-md-8 col-sm-6">
                             <span class="subTitle">새로운 메타버스의 시대, 갤럭시 코레퍼레이션은 즐거운 세상을 만들고 누구나가 꿈을 이룰수 있는 새로운 세계를 만들어 나갑니다.</span>
                         </div>
-                        <div class="col-md-4 col-sm-6">
-                            <img width="100%" src="../../../../../assets/images/home/motion_1.gif" />
+                        <div class="col-md-4 col-sm-6" #motion1>
+                            <app-metaverse [motion1Element]="motion1Element"></app-metaverse>
                         </div>
                     </div>
                 </div>
@@ -36,8 +36,8 @@
                         <div class="fact-inner col-md-8 col-sm-6">
                             <span class="subTitle">우리가 만든 페르소나 별속에서 무한한 콘텐츠 세상을 연결하고 우리의 IP들이 다양한 비즈니스로 연결되어 메타버스 통합 허브를 만들어 가고 있습니다.</span>
                         </div>
-                        <div class="col-md-4 col-sm-6">
-                            <img width="100%" src="../../../../../assets/images/home/motion_2.gif" />
+                        <div class="col-md-4 col-sm-6" #motion2>
+                            <app-world [motion2Element]="motion2Element"></app-world>
                         </div>
                     </div>
                 </div>
@@ -50,13 +50,13 @@
                         <div class="fact-inner col-md-8 col-sm-6">
                             <span class="subTitle">온라인과 오프라인으로 연결되는 IP를 디지털 트윈을 통해 우리가 온오프라인으로 편하게 움직일수 있는 개체를 만들어냅니다.</span>
                         </div>
-                        <div class="col-md-4 col-sm-6">
-                            <img width="100%" src="../../../../../assets/images/home/motion_3.gif" />
+                        <div class="col-md-4 col-sm-6" #motion3>
+                            <app-persona [motion3Element]="motion3Element"></app-persona>
                         </div>
                     </div>
                 </div>
                 <div class="rotate-fact col-md-12 col-sm-6 wow zoomIn" data-wow-delay="0.4s">
-                    <div class="rotate-box-1 square-icon ">
+                    <div class="rotate-box-1 square-icon">
                         <div class="fact-header col-md-12 col-sm-12">
                             <h1>CULTURE</h1>
                             <h1>CREATION</h1>
@@ -64,8 +64,8 @@
                         <div class="fact-inner col-md-8 col-sm-6">
                             <span class="subTitle">우리가 만든 메타버스의 세상 속에 갤럭시의 IP가 새로운 세상을 만들어 무엇이든 이루어지는 세계를 같이합니다.</span>
                         </div>
-                        <div class="col-md-4 col-sm-6">
-                            <img width="100%" src="../../../../../assets/images/home/motion_4.gif" />
+                        <div class="col-md-4 col-sm-6" #motion4>
+                            <app-culture [motion4Element]="motion4Element"></app-culture>
                         </div>
                     </div>
                 </div>
