일단 제플린에 있는대로는 완성

--- a/src/app/pages/pc/home/galaxy-home.component.html
+++ b/src/app/pages/pc/home/galaxy-home.component.html
@@ -10,9 +10,12 @@
 <!-- Begin business section -->
 <app-galaxy-business></app-galaxy-business>
 <!-- End business section -->
-<!-- Begin social section -->
-<app-galaxy-social></app-galaxy-social>
-<!-- End social section -->
 <!-- Begin careers section -->
 <app-galaxy-careers></app-galaxy-careers>
 <!-- End careers section -->
+<!-- Begin social section -->
+<app-galaxy-social></app-galaxy-social>
+<!-- End social section -->
+<!-- Begin contact section -->
+<app-galaxy-contact></app-galaxy-contact>
+<!-- End contact section -->
