--- a/src/app/pages/pc/home/social/galaxy-social.component.html
+++ b/src/app/pages/pc/home/social/galaxy-social.component.html
@@ -1,35 +1,35 @@
-<section id="social-section" class="bg-style1">
-  <!-- Begin page header-->
-  <div class="page-header-wrapper">
-      <div class="container">
-          <div class="page-header text-center wow fadeInDown" data-wow-delay="0.4s">
-              <h2>Join Us</h2>
-              <div class="devider"></div>
-              <p class="subtitle">Follow us on social networks</p>
-          </div>
-      </div>
-  </div>
-  <!-- End page header-->
-  <div class="container">
-      <ul class="social-list">
-          <li>
-              <a href="#" class="rotate-box-1 square-icon text-center wow zoomIn" data-wow-delay="0.3s"><span class="rotate-box-icon"><i class="fa fa-facebook"></i></span></a>
-          </li>
-          <li>
-              <a href="#" class="rotate-box-1 square-icon text-center wow zoomIn" data-wow-delay="0.4s"><span class="rotate-box-icon"><i class="fa fa-twitter"></i></span></a>
-          </li>
-          <li>
-              <a href="#" class="rotate-box-1 square-icon text-center wow zoomIn" data-wow-delay="0.5s"><span class="rotate-box-icon"><i class="fa fa-google-plus"></i></span></a>
-          </li>
-          <li>
-              <a href="#" class="rotate-box-1 square-icon text-center wow zoomIn" data-wow-delay="0.6s"><span class="rotate-box-icon"><i class="fa fa-pinterest-p"></i></span></a>
-          </li>
-          <li>
-              <a href="#" class="rotate-box-1 square-icon text-center wow zoomIn" data-wow-delay="0.7s"><span class="rotate-box-icon"><i class="fa fa-tumblr"></i></span></a>
-          </li>
-          <li>
-              <a href="#" class="rotate-box-1 square-icon text-center wow zoomIn" data-wow-delay="0.8s"><span class="rotate-box-icon"><i class="fa fa-dribbble"></i></span></a>
-          </li>
-      </ul>
-  </div>
+<section id="social-section">
+    <!-- Begin page header-->
+    <div class="page-header-wrapper">
+        <div class="container">
+            <div class="page-header text-center wow fadeInUp" data-wow-delay="0.1s">
+                <img src="assets/images/home/social/devide_join_us.png" />
+            </div>
+            <div class="page-header text-center wow fadeInUp" data-wow-delay="0.2s">
+                <img src="assets/images/home/social/news_letter.png" />
+            </div>
+        </div>
+    </div>
+    <!-- End page header-->
+    <div class="rotate-box-1-wrapper">
+        <div class="container">
+            <div class="row">
+                <div class="wow slideInLeft fact text-center">
+                    <div class="rotate-box-info">
+                        <span class="subTitle">하루가 다르게 각종 분야에서 메타버스 소식들이 쏟아지고 있습니다.</span>
+                        <span class="subTitle">갤럭시코퍼레이션의 소식과 메타버스 정보들을 전해드립니다.</span>
+                        <span class="subTitle">갤럭시의 ‘메타버스 뉴스 레터’를 구독해보세요.</span>
+                    </div>
+                </div>
+            </div>
+            <div class="extra-space-l"></div>
+            <div class="row">
+                <div class="wow slideInUp fact text-center">
+                    <a href="#">
+                        <img src="assets/images/home/social/subscribe.png" />
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
 </section>
