--- a/src/app/pages/pc/home/business/galaxy-business.component.html
+++ b/src/app/pages/pc/home/business/galaxy-business.component.html
@@ -4,10 +4,9 @@
         <!-- Begin page header-->
         <div class="page-header-wrapper">
             <div class="container">
-                <div class="page-header text-center wow fadeInDown" data-wow-delay="0.4s">
-                    <h2>Business</h2>
-                    <div class="devider"></div>
-                    <p class="subtitle">Before anyone is not told</p>
+                <div class="page-header text-center wow fadeInUp" data-wow-delay="0.3s">
+                    <img src="assets/images/home/business/devide_business.png" />
+                    <p class="devide_sub"><img src="assets/images/home/business/devide_business_sub.png" /></p>
                 </div>
             </div>
         </div>
@@ -17,8 +16,8 @@
                 <div class="row">
                     <div class="wow slideInLeft fact text-center">
                         <div class="rotate-box-info">
-                            <h1>TO THE WORLD OF INFINITE CONNECT I INVITE YOU</h1>
-                            <h1>무한 컨텐츠 세상으로 당신을 초대합니다.</h1>
+                            <h1>THE WORLD OF INFINITE CONTENTS</h1>
+                            <span class="subTitle">무한한 콘텐츠의 세계로 당신을 초대합니다.</span>
                         </div>
                     </div>
                 </div>
@@ -26,33 +25,38 @@
                 <div class="row">
                     <div class="fact col-md-6 col-sm-6 wow fadeInLeft">
                         <div class="fact-inner">
-                            <h1>갤럭시 코퍼레이션</h1>
-                            <span class="subTitle">메타버스를 만들어가는 콘텐츠로 IP, 플랫폼, 메타버스 서비스로 비지니스를 만들어가는 집단입니다.</span>
+                            <h4>갤럭시 코퍼레이션은 IP, 플랫폼, 메타버스 서비스로 비즈니스를 만드는 집단입니다.</h4>
                         </div>
                     </div>
                     <div class="fact col-md-6 col-sm-6">
                         <div class="fact-inner wow fadeInRight" data-wow-delay="0.1s">
-                            <h4>세임사이드</h4>
-                            <p class="lead">세임사이드는(BIGHIT MUSIC)은 음악에 대한 믿음, 팬들의 공감과 지지를 기반으로 언제나 새로운 길을 개척해나가는 가장 선도적인 음악 레이블입니다. 기존에 없던 세임사이드 뮤직만의 방식으로 시대를 담는 가장 상징적인 음악을 만들어 전 세계 팬들에게 올 수 있도록 노력하고 있습니다. 소속 아티스트로는 마미손, 원슈타인, 산이가 있습니다.</p>
+                            <h4>SAMESIDE</h4>
+                            <p class="lead">세임사이드(SAMESIDE)는 음악에 대한 믿음, 팬들의 공감과 지지를 기반으로 언제나 새로운 길을 개척해나가는 가장 선도적인 음악 레이블입니다. 기존에 없던  세임사이드 뮤직만의 방식으로 시대를 담는 가장 상징적인 음악을 만들어 전 세계 팬들이 들을 수 있도록 노력하고 있습니다. 소속 아티스트로는 마미손, 원슈타인, 산이가 있습니다.</p>
                             <div class="extra-space-m"></div>
-                            <div class="text-right">
-                                <a class="btn btn-default btn-lg" href="#" target="_blank" role="button">바로가기</a>
+                            <div class="text-left">
+                                <a href="#" target="_blank" role="button">
+                                    <img src="assets/images/home/business/home.png" width="75px" height="auto"/>
+                                </a>
                             </div>
                         </div>
                         <div class="fact-inner wow fadeInRight" data-wow-delay="0.2s">
-                            <h4>쥬피터 ENT</h4>
-                            <p class="lead">세임사이드는(BIGHIT MUSIC)은 음악에 대한 믿음, 팬들의 공감과 지지를 기반으로 언제나 새로운 길을 개척해나가는 가장 선도적인 음악 레이블입니다. 기존에 없던 세임사이드 뮤직만의 방식으로 시대를 담는 가장 상징적인 음악을 만들어 전 세계 팬들에게 올 수 있도록 노력하고 있습니다. 소속 아티스트로는 마미손, 원슈타인, 산이가 있습니다.</p>
+                            <h4>JUPITER Ent.</h4>
+                            <p class="lead">세임사이드(SAMESIDE)는 음악에 대한 믿음, 팬들의 공감과 지지를 기반으로 언제나 새로운 길을 개척해나가는 가장 선도적인 음악 레이블입니다. 기존에 없던  세임사이드 뮤직만의 방식으로 시대를 담는 가장 상징적인 음악을 만들어 전 세계 팬들이 들을 수 있도록 노력하고 있습니다. 소속 아티스트로는 마미손, 원슈타인, 산이가 있습니다.</p>
                             <div class="extra-space-m"></div>
-                            <div class="text-right">
-                                <a class="btn btn-default btn-lg" href="#" target="_blank" role="button">바로가기</a>
+                            <div class="text-left">
+                                <a href="#" target="_blank" role="button">
+                                    <img src="assets/images/home/business/home.png" width="75px" height="auto"/>
+                                </a>
                             </div>
                         </div>
                         <div class="fact-inner wow fadeInRight" data-wow-delay="0.3s">
-                            <h4>빅플레쉬</h4>
-                            <p class="lead">세임사이드는(BIGHIT MUSIC)은 음악에 대한 믿음, 팬들의 공감과 지지를 기반으로 언제나 새로운 길을 개척해나가는 가장 선도적인 음악 레이블입니다. 기존에 없던 세임사이드 뮤직만의 방식으로 시대를 담는 가장 상징적인 음악을 만들어 전 세계 팬들에게 올 수 있도록 노력하고 있습니다. 소속 아티스트로는 마미손, 원슈타인, 산이가 있습니다.</p>
+                            <h4>BIG FLASH</h4>
+                            <p class="lead">세임사이드(SAMESIDE)는 음악에 대한 믿음, 팬들의 공감과 지지를 기반으로 언제나 새로운 길을 개척해나가는 가장 선도적인 음악 레이블입니다. 기존에 없던  세임사이드 뮤직만의 방식으로 시대를 담는 가장 상징적인 음악을 만들어 전 세계 팬들이 들을 수 있도록 노력하고 있습니다. 소속 아티스트로는 마미손, 원슈타인, 산이가 있습니다.</p>
                             <div class="extra-space-m"></div>
-                            <div class="text-right">
-                                <a class="btn btn-default btn-lg" href="#" target="_blank" role="button">바로가기</a>
+                            <div class="text-left">
+                                <a href="#" target="_blank" role="button">
+                                    <img src="assets/images/home/business/home.png" width="75px" height="auto"/>
+                                </a>
                             </div>
                         </div>
                     </div>
@@ -61,25 +65,19 @@
                 <div class="row">
                     <div class="fact col-md-6 col-sm-6 wow fadeInLeft">
                         <div class="fact-inner">
-                            <h1>SOLUTION</h1>
-                            <span class="subTitle">갤럭시 IP와 연계되는 사업을 발전시키고 확장시킵니다.</span>
+                            <h4>MAGAZINE</h4>
+                            <span class="subTitle">갤럭시 메타버스의 최신 정보를 공유합니다</span>
                         </div>
                     </div>
                     <div class="fact col-md-6 col-sm-6">
-                        <div class="fact-inner wow fadeInRight" data-wow-delay="0.1s">
-                            <h4>은하철도 999</h4>
-                            <p class="lead">세임사이드는(BIGHIT MUSIC)은 음악에 대한 믿음, 팬들의 공감과 지지를 기반으로 언제나 새로운 길을 개척해나가는 가장 선도적인 음악 레이블입니다. 기존에 없던 세임사이드 뮤직만의 방식으로 시대를 담는 가장 상징적인 음악을 만들어 전 세계 팬들에게 올 수 있도록 노력하고 있습니다. 소속 아티스트로는 마미손, 원슈타인, 산이가 있습니다.</p>
+                        <div class="fact-inner wow fadeInRight" data-wow-delay="0.4s">
+                            <h4>YOURABORATION</h4>
+                            <p class="lead">세임사이드(SAMESIDE)는 음악에 대한 믿음, 팬들의 공감과 지지를 기반으로 언제나 새로운 길을 개척해나가는 가장 선도적인 음악 레이블입니다. 기존에 없던  세임사이드 뮤직만의 방식으로 시대를 담는 가장 상징적인 음악을 만들어 전 세계 팬들이 들을 수 있도록 노력하고 있습니다. 소속 아티스트로는 마미손, 원슈타인, 산이가 있습니다.</p>
                             <div class="extra-space-m"></div>
-                            <div class="text-right">
-                                <a class="btn btn-default btn-lg" href="#" target="_blank" role="button">바로가기</a>
-                            </div>
-                        </div>
-                        <div class="fact-inner wow fadeInRight" data-wow-delay="0.2s">
-                            <h4>화이트홀</h4>
-                            <p class="lead">세임사이드는(BIGHIT MUSIC)은 음악에 대한 믿음, 팬들의 공감과 지지를 기반으로 언제나 새로운 길을 개척해나가는 가장 선도적인 음악 레이블입니다. 기존에 없던 세임사이드 뮤직만의 방식으로 시대를 담는 가장 상징적인 음악을 만들어 전 세계 팬들에게 올 수 있도록 노력하고 있습니다. 소속 아티스트로는 마미손, 원슈타인, 산이가 있습니다.</p>
-                            <div class="extra-space-m"></div>
-                            <div class="text-right">
-                                <a class="btn btn-default btn-lg" href="#" target="_blank" role="button">바로가기</a>
+                            <div class="text-left">
+                                <a href="#" target="_blank" role="button">
+                                    <img src="assets/images/home/business/home.png" width="75px" height="auto"/>
+                                </a>
                             </div>
                         </div>
                     </div>
@@ -88,25 +86,29 @@
                 <div class="row">
                     <div class="fact col-md-6 col-sm-6">
                         <div class="fact-inner wow fadeInLeft">
-                            <h1>MAGAZINE</h1>
-                            <span class="subTitle">갤럭시의 메타버스의 최신정보를 공유합니다.</span>
+                            <h1>SOLUTION</h1>
+                            <span class="subTitle">갤럭시 IP와 연계되는 사업을 발전시키고 확장시킵니다</span>
                         </div>
                     </div>
                     <div class="fact col-md-6 col-sm-6">
                         <div class="fact-inner wow fadeInRight" data-wow-delay="0.1s">
-                            <h4>유라보네이션</h4>
-                            <p class="lead">세임사이드는(BIGHIT MUSIC)은 음악에 대한 믿음, 팬들의 공감과 지지를 기반으로 언제나 새로운 길을 개척해나가는 가장 선도적인 음악 레이블입니다. 기존에 없던 세임사이드 뮤직만의 방식으로 시대를 담는 가장 상징적인 음악을 만들어 전 세계 팬들에게 올 수 있도록 노력하고 있습니다. 소속 아티스트로는 마미손, 원슈타인, 산이가 있습니다.</p>
+                            <h4>UNIVERSE RAIL 999</h4>
+                            <p class="lead">세임사이드(SAMESIDE)는 음악에 대한 믿음, 팬들의 공감과 지지를 기반으로 언제나 새로운 길을 개척해나가는 가장 선도적인 음악 레이블입니다. 기존에 없던  세임사이드 뮤직만의 방식으로 시대를 담는 가장 상징적인 음악을 만들어 전 세계 팬들이 들을 수 있도록 노력하고 있습니다. 소속 아티스트로는 마미손, 원슈타인, 산이가 있습니다.</p>
                             <div class="extra-space-m"></div>
-                            <div class="text-right">
-                                <a class="btn btn-default btn-lg" href="#" target="_blank" role="button">바로가기</a>
+                            <div class="text-left">
+                                <a href="#" target="_blank" role="button">
+                                    <img src="assets/images/home/business/home.png" width="75px" height="auto"/>
+                                </a>
                             </div>
                         </div>
                         <div class="fact-inner wow fadeInRight" data-wow-delay="0.2s">
-                            <h4>유니트맨션</h4>
-                            <p class="lead">세임사이드는(BIGHIT MUSIC)은 음악에 대한 믿음, 팬들의 공감과 지지를 기반으로 언제나 새로운 길을 개척해나가는 가장 선도적인 음악 레이블입니다. 기존에 없던 세임사이드 뮤직만의 방식으로 시대를 담는 가장 상징적인 음악을 만들어 전 세계 팬들에게 올 수 있도록 노력하고 있습니다. 소속 아티스트로는 마미손, 원슈타인, 산이가 있습니다.</p>
+                            <h4>WHITE HOLE</h4>
+                            <p class="lead">세임사이드(SAMESIDE)는 음악에 대한 믿음, 팬들의 공감과 지지를 기반으로 언제나 새로운 길을 개척해나가는 가장 선도적인 음악 레이블입니다. 기존에 없던  세임사이드 뮤직만의 방식으로 시대를 담는 가장 상징적인 음악을 만들어 전 세계 팬들이 들을 수 있도록 노력하고 있습니다. 소속 아티스트로는 마미손, 원슈타인, 산이가 있습니다.</p>
                             <div class="extra-space-m"></div>
-                            <div class="text-right">
-                                <a class="btn btn-default btn-lg" href="#" target="_blank" role="button">바로가기</a>
+                            <div class="text-left">
+                                <a href="#" target="_blank" role="button">
+                                    <img src="assets/images/home/business/home.png" width="75px" height="auto"/>
+                                </a>
                             </div>
                         </div>
                     </div>
