--- a/src/app/pages/pc/home/careers/galaxy-careers.component.html
+++ b/src/app/pages/pc/home/careers/galaxy-careers.component.html
@@ -1,71 +1,37 @@
 <section id="contact-section" class="page bg-style1 text-white" data-stellar-background-ratio="0.5">
     <!-- <div class="cover"></div> -->
     <!-- Begin page header-->
-    <div class="page-header-wrapper">
+    <!-- <div class="page-header-wrapper">
         <div class="container">
             <div class="page-header text-center wow fadeInDown" data-wow-delay="0.4s">
                 <h2>Careers</h2>
                 <div class="devider"></div>
             </div>
         </div>
-    </div>
+    </div> -->
     <!-- End page header-->
     <div class="contact wow bounceInRight" data-wow-delay="0.4s">
         <div class="container">
             <div class="row">
-                <div class="col-sm-6">
+                <div class="col-sm-12 col-md-12">
                     <div class="contact-info">
-                        <h2>GALAXY DNA는 우리가 일하는 방식과 가치 판단의 기준을 의미합니다.</h2>
+                        <h5>GALAXY DNA는 일하는 방식과 가치 판단의 기준을 의미합니다.</h5>
                     </div>
                 </div>
-                <div class="col-sm-6">
-                    <div class="contact-form" #contactForm>
-                        <app-connection [contactFormElement]="contactFormElement"></app-connection>
+                <div class="col-sm-12 col-md-12">
+                    <div class="col-sm-4 col-md-4">
+                        
+                    </div>
+                    <div class="col-sm-4 col-md-4">
+                        <div class="contact-form" #contactForm>
+                            <app-connection [contactFormElement]="contactFormElement"></app-connection>
+                        </div>
+                    </div>
+                    <div class="col-sm-4 col-md-4">
+                        
                     </div>
                 </div>
-            </div>
-            <div class="row">
-                <div class="col-md-4">
-                    <div class="contact-form">
-                        <h2>정</h2>
-                        <h4>우리가 원하는 인재의 모습</h4>
-                        <span class="lead">자신의 일을 진심으로 좋아하는 사람은 타협하지 안는 스스로의 '높은 기준'으로 최고의 결과를 만들기 위해 몰입하며, 근본적인 해결책을 찾끼 위해 고민하고 '끊임 없는 개선'을 시도합니다. 또한 사소한 문제나 궁금증도 그냥 넘기지 않고, 긍정적 시각으로 더 나은 결과와 환경을 만들기 위해 끝까지 노력합니다. </span>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="contact-form">
-                        <h2>자율</h2>
-                        <h4>우리가 일하는 방식</h4>
-                        <span class="lead">다양한 경험과 생각을 제약 없이 소통할 수 있는 '수평적 커뮤니케이션'을 지향합니다. 정보와 의견을 적극적으로 공유하고, 필요한 피드백을 서로 주고 받으며 더 좋은 결과를 만듭니다. 또한 본인이 원하는 바를 마음껏 펼칠 수 있도록 '충분한 권한과 책임'을 부여 받아 업무 영역을 적극적으로 확장할 수 있습니다.</span>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="contact-form">
-                        <h2>신뢰</h2>
-                        <h4>우리가 서로를 바라보는 태도</h4>
-                        <span class="lead">우리는 함께 성공한다는 믿음, 즉 'Win Together 마인드'로 일합니다. 회사의 미션과 비전을 진정으로 이해하고 공감하며, 공동 목표 달성을 위해 '조건 없이 협력'합니다. 협업 과정에서 필연적으로 발생하는 건강한 갈등을 장려하고, 용감하고 과감한 논의로 생산적인 결론을 이끌어 냅니다.</span>
-                    </div>
-                </div>
-            </div>
-            <div class="extra-space-xxl"></div>
-            <div class="row">
-                <div class="col-md-4">
-                    
-                </div>
-                <div class="col-md-4">
-                    <div class="contact-form">
-                        <h2>자율</h2>
-                        <h4>우리가 일하는 방식</h4>
-                        <span class="lead">다양한 경험과 생각을 제약 없이 소통할 수 있는 '수평적 커뮤니케이션'을 지향합니다. 정보와 의견을 적극적으로 공유하고, 필요한 피드백을 서로 주고 받으며 더 좋은 결과를 만듭니다. 또한 본인이 원하는 바를 마음껏 펼칠 수 있도록 '충분한 권한과 책임'을 부여 받아 업무 영역을 적극적으로 확장할 수 있습니다.</span>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="contact-form">
-                        <h2>신뢰</h2>
-                        <h4>우리가 서로를 바라보는 태도</h4>
-                        <span class="lead">우리는 함께 성공한다는 믿음, 즉 'Win Together 마인드'로 일합니다. 회사의 미션과 비전을 진정으로 이해하고 공감하며, 공동 목표 달성을 위해 '조건 없이 협력'합니다. 협업 과정에서 필연적으로 발생하는 건강한 갈등을 장려하고, 용감하고 과감한 논의로 생산적인 결론을 이끌어 냅니다.</span>
-                    </div>
-                </div>
+                
             </div>
         </div>
         <!-- /.container -->
