--- a/src/app/pages/pc/home/ip/galaxy-ip.component.html
+++ b/src/app/pages/pc/home/ip/galaxy-ip.component.html
@@ -6,10 +6,9 @@
                     <!-- Begin page header-->
                     <div class="page-header-wrapper">
                         <div class="container">
-                            <div class="page-header text-center wow fadeInDown" data-wow-delay="0.4s">
-                                <h2>Our Works</h2>
-                                <div class="devider"></div>
-                                <p class="subtitle">What we are proud of</p>
+                            <div class="page-header text-center wow fadeInUp" data-wow-delay="0.3s">
+                                <img src="assets/images/home/ip/devide_ip.png" />
+                                <p class="devide_sub"><img src="assets/images/home/ip/devide_ip_sub.png" /></p>
                             </div>
                         </div>
                     </div>
@@ -17,41 +16,105 @@
                     <div class="portfolio_content_area">
                         <div class="portfolio_content">
                             <div class="row" id="portfolio">
-                                <div class="col-xs-12 col-sm-4 wow fadeInUp">
+                                <!-- <div class="col-xs-12 col-sm-4 wow fadeInUp">
                                     <div class="portfolio_single_content">
-                                        <img src="assets/images/home/portfolio/z_dabi.png" alt="title" />
+                                        <img src="assets/images/home/portfolio/z1.png" alt="title" />
                                         <div>
-                                            <a href="assets/images/home/portfolio/z_dabi_detail.jpeg" data-lightbox="portfolio" class="link-preview"><i class="ion-android-archive"></i> QUADDURUP</a>
+                                            <a href="assets/images/home/portfolio/z1_detail.jpeg" data-lightbox="portfolio" class="link-preview"><i class="ion-android-archive"></i> QUADDURUP</a>
                                             <span>파워풀한 댄스와 눈웃음이 매력적인 QDR입니다.</span>
                                         </div>
                                     </div>
-                                </div>
+                                </div> -->
                                 <div class="col-xs-12 col-sm-4 wow fadeInUp" data-wow-delay="0.1s">
                                     <div class="portfolio_single_content">
-                                        <img src="assets/images/home/portfolio/z_insoon.png" alt="title" />
+                                        <img src="assets/images/home/portfolio/z2.png" alt="title" />
                                         <div>
-                                            <a href="assets/images/home/portfolio/z_insoon_detail.jpeg" data-lightbox="portfolio" class="link-preview"><i class="ion-android-attach"></i> QUADDURUP</a>
+                                            <a href="assets/images/home/portfolio/z2_detail.jpeg" data-lightbox="portfolio" class="link-preview"><i class="ion-android-attach"></i> QUADDURUP</a>
                                             <span>파워풀한 댄스와 눈웃음이 매력적인 QDR입니다.</span>
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col-xs-12 col-sm-4 wow fadeInUp" data-wow-delay="0.2s">
+                                <!-- <div class="col-xs-12 col-sm-4 wow fadeInUp" data-wow-delay="0.2s">
                                     <div class="portfolio_single_content">
-                                        <img src="assets/images/home/portfolio/z_mommyson.png" alt="title" />
+                                        <img src="assets/images/home/portfolio/z3.png" alt="title" />
                                         <div>
-                                            <a href="assets/images/home/portfolio/z_mommyson_detail.jpeg" data-lightbox="portfolio" class="link-preview"><i class="ion-android-camera"></i> QUADDURUP</a>
+                                            <a href="assets/images/home/portfolio/z3_detail.jpeg" data-lightbox="portfolio" class="link-preview"><i class="ion-android-camera"></i> QUADDURUP</a>
+                                            <span>파워풀한 댄스와 눈웃음이 매력적인 QDR입니다.</span>
+                                        </div>
+                                    </div>
+                                </div> -->
+                                <!-- <div class="col-xs-12 col-sm-4 wow fadeInUp" data-wow-delay="0.3s">
+                                    <div class="portfolio_single_content">
+                                        <img src="assets/images/home/portfolio/z4.png" alt="title" />
+                                        <div>
+                                            <a href="assets/images/home/portfolio/z4_detail.jpeg" data-lightbox="portfolio" class="link-preview"><i class="ion-android-chat"></i> QUADDURUP</a>
+                                            <span>파워풀한 댄스와 눈웃음이 매력적인 QDR입니다.</span>
+                                        </div>
+                                    </div>
+                                </div> -->
+                                <div class="col-xs-12 col-sm-4 wow fadeInUp" data-wow-delay="0.4s">
+                                    <div class="portfolio_single_content">
+                                        <img src="assets/images/home/portfolio/z5.png" alt="title" />
+                                        <div>
+                                            <a href="assets/images/home/portfolio/z5_detail.jpeg" data-lightbox="portfolio" class="link-preview"><i class="ion-android-attach"></i> QUADDURUP</a>
                                             <span>파워풀한 댄스와 눈웃음이 매력적인 QDR입니다.</span>
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col-xs-12 col-sm-4 wow fadeInUp" data-wow-delay="0.3s">
+                                <!-- <div class="col-xs-12 col-sm-4 wow fadeInUp" data-wow-delay="0.5s">
                                     <div class="portfolio_single_content">
-                                        <img src="assets/images/home/portfolio/z_zzuadu.png" alt="title" />
+                                        <img src="assets/images/home/portfolio/z6.png" alt="title" />
                                         <div>
-                                            <a href="assets/images/home/portfolio/z_zzuadu_detail.jpeg" data-lightbox="portfolio" class="link-preview"><i class="ion-android-chat"></i> QUADDURUP</a>
+                                            <a href="assets/images/home/portfolio/z2_detail.jpeg" data-lightbox="portfolio" class="link-preview"><i class="ion-android-attach"></i> QUADDURUP</a>
                                             <span>파워풀한 댄스와 눈웃음이 매력적인 QDR입니다.</span>
                                         </div>
                                     </div>
+                                </div> -->
+                                <!-- <div class="col-xs-12 col-sm-4 wow fadeInUp" data-wow-delay="0.6s">
+                                    <div class="portfolio_single_content">
+                                        <img src="assets/images/home/portfolio/z7.png" alt="title" />
+                                        <div>
+                                            <a href="assets/images/home/portfolio/z7_detail.jpeg" data-lightbox="portfolio" class="link-preview"><i class="ion-android-attach"></i> QUADDURUP</a>
+                                            <span>파워풀한 댄스와 눈웃음이 매력적인 QDR입니다.</span>
+                                        </div>
+                                    </div>
+                                </div> -->
+                                <!-- <div class="col-xs-12 col-sm-4 wow fadeInUp" data-wow-delay="0.7s">
+                                    <div class="portfolio_single_content">
+                                        <img src="assets/images/home/portfolio/z8.png" alt="title" />
+                                        <div>
+                                            <a href="assets/images/home/portfolio/z6_detail.jpeg" data-lightbox="portfolio" class="link-preview"><i class="ion-android-attach"></i> QUADDURUP</a>
+                                            <span>파워풀한 댄스와 눈웃음이 매력적인 QDR입니다.</span>
+                                        </div>
+                                    </div>
+                                </div> -->
+                                <div class="col-xs-12 col-sm-4 wow fadeInUp" data-wow-delay="0.8s">
+                                    <div class="portfolio_single_content">
+                                        <img src="assets/images/home/portfolio/z9.png" alt="title" />
+                                        <div>
+                                            <a href="assets/images/home/portfolio/z9_detail.jpeg" data-lightbox="portfolio" class="link-preview"><i class="ion-android-attach"></i> QUADDURUP</a>
+                                            <span>파워풀한 댄스와 눈웃음이 매력적인 QDR입니다.</span>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="view_more">
+                                <div class="col-xs-12 col-sm-4 wow fadeInUp" data-wow-delay="0.8s">
+                                    <!-- <div>
+                                        <img src="assets/images/home/ip/more_left.png" alt="title" />
+                                    </div> -->
+                                </div>
+                                <div class="col-xs-12 col-sm-4 wow fadeInUp" data-wow-delay="0.8s">
+                                    <div>
+                                        <a href="#">
+                                            <img src="assets/images/home/ip/view_more.png" alt="title" />
+                                        </a>
+                                    </div>
+                                </div>
+                                <div class="col-xs-12 col-sm-4 wow fadeInUp" data-wow-delay="0.8s">
+                                    <!-- <div>
+                                        <img src="assets/images/home/ip/more_right.png" alt="title" />
+                                    </div> -->
                                 </div>
                             </div>
                         </div>
