자잘한 CSS 수정

--- a/src/app/pages/pc/home/social/galaxy-social.component.html
+++ b/src/app/pages/pc/home/social/galaxy-social.component.html
@@ -5,29 +5,35 @@
             <div class="page-header text-center wow fadeInUp" data-wow-delay="0.1s">
                 <img src="assets/images/home/social/devide_join_us.png" />
             </div>
+            <div class="extra-space-m"></div>
             <div class="page-header text-center wow fadeInUp" data-wow-delay="0.2s">
                 <img src="assets/images/home/social/news_letter.png" />
             </div>
         </div>
     </div>
+    <div class="extra-space-l"></div>
     <!-- End page header-->
     <div class="rotate-box-1-wrapper">
         <div class="container">
             <div class="row">
-                <div class="wow slideInLeft fact text-center">
-                    <div class="rotate-box-info">
-                        <span class="subTitle">하루가 다르게 각종 분야에서 메타버스 소식들이 쏟아지고 있습니다.</span>
-                        <span class="subTitle">갤럭시코퍼레이션의 소식과 메타버스 정보들을 전해드립니다.</span>
-                        <span class="subTitle">갤럭시의 ‘메타버스 뉴스 레터’를 구독해보세요.</span>
-                    </div>
+                <div class="col-sm-12 col-md-12 wow slideInLeft fact text-center">
+                    <span class="subTitle">하루가 다르게 각종 분야에서 메타버스 소식들이 쏟아지고 있습니다.</span>
+                    <span class="subTitle">갤럭시코퍼레이션의 소식과 메타버스 정보들을 전해드립니다.</span>
+                    <span class="subTitle">갤럭시의 ‘메타버스 뉴스 레터’를 구독해보세요.</span>
                 </div>
             </div>
             <div class="extra-space-l"></div>
             <div class="row">
-                <div class="wow slideInUp fact text-center">
-                    <a href="#">
-                        <img src="assets/images/home/social/subscribe.png" />
-                    </a>
+                <div class="col-sm-12 col-md-12 wow slideInUp fact text-center">
+                    <div class="col-sm-4 col-md-4">
+                    </div>
+                    <div class="col-sm-4 col-md-4">
+                        <a href="#">
+                            <img src="assets/images/home/social/subscribe.png" />
+                        </a>
+                    </div>
+                    <div class="col-sm-4 col-md-4">
+                    </div>
                 </div>
             </div>
         </div>
