--- a/src/app/pages/pc/home/careers/galaxy-careers.component.html
+++ b/src/app/pages/pc/home/careers/galaxy-careers.component.html
@@ -1,4 +1,4 @@
-<section id="contact-section" class="page bg-style1 text-white" data-stellar-background-ratio="0.5">
+<section id="dna-section" class="page bg-style1 text-white" data-stellar-background-ratio="0.5">
     <!-- <div class="cover"></div> -->
     <!-- Begin page header-->
     <!-- <div class="page-header-wrapper">
