--- a/src/app/pages/pc/home/contact/galaxy-contact.component.html
+++ b/src/app/pages/pc/home/contact/galaxy-contact.component.html
@@ -6,11 +6,13 @@
             <div class="page-header text-center wow fadeInUp" data-wow-delay="0.3s">
                 <img src="assets/images/home/contact/devide_contact.png" />
             </div>
+            <div class="extra-space-m"></div>
             <div class="page-header text-center wow fadeInUp" data-wow-delay="0.3s">
                 <p class="devide_sub"><img src="assets/images/home/contact/devide_contact_sub.png" /></p>
             </div>
         </div>
     </div>
+    <div class="extra-space-xl"></div>
     <!-- End page header-->
     <div class="contact wow bounceInUp" data-wow-delay="0.4s">
         <div class="container text-center">
