intro까지 이미지 변경 작업 진행

--- a/src/app/pages/pc/home/intro/galaxy-company.component.html
+++ b/src/app/pages/pc/home/intro/galaxy-company.component.html
@@ -14,10 +14,16 @@
         <div class="container">
             <div class="row">
                 <div class="rotate-fact-start col-md-12 col-sm-12 wow slideInLeft" data-wow-delay="0.1s">
-                    <div class="rotate-box-1 square-icon ">
+                    <div class="rotate-box-1 square-icon">
                         <div class="fact-header col-md-12 col-sm-12">
-                            <h1>WE CREATE</h1>
-                            <h1>METARVERS</h1>
+                            <div class="pc">
+                                <img src="assets/images/home/intro/first.png" width="50%" height="95%"/>
+                            </div>
+                            <div class="mobile">
+                                <img src="assets/images/home/intro/first_m.png" width="100%"/>
+                            </div>
+                            <!-- <h1>WE CREATE</h1>
+                            <h1>METARVERS</h1> -->
                         </div>
                         <div class="fact-inner col-md-8 col-sm-6">
                             <span class="subTitle">새로운 메타버스의 시대, 갤럭시 코레퍼레이션은 즐거운 세상을 만들고 누구나가 꿈을 이룰수 있는 새로운 세계를 만들어 나갑니다.</span>
