--- a/src/app/pages/pc/home/about/galaxy-about.component.html
+++ b/src/app/pages/pc/home/about/galaxy-about.component.html
@@ -4,15 +4,33 @@
         <div class="caption text-center text-white" data-stellar-ratio="0.7">
             <div id="owl-intro-text" class="owl-carousel">
                 <div class="item">
-                    <h1>ENJOY OUR METAVERS</h1>
+                    <h1 class="pc">
+                        <img src="assets/images/home/about/pc/main_enjoy_our_metaverse.png" width="78%"/>
+                    </h1>
+                    <h1 class="mobile">
+                        <img src="assets/images/home/about/mo/main_enjoy_our_metaverse_m.png" width="80%"/>
+                    </h1>
+                    <!-- <h1>ENJOY OUR METAVERS</h1> -->
                     <a class="btn btn-blank" href="http://bookae.net" target="_blank" role="button"><img src="assets/images/home/main/main_who_we_are_m.png" width="67%"/></a>
                 </div>
                 <div class="item">
-                    <h1>PERSONA UNIVERSE</h1>
+                    <h1 class="pc">
+                        <img src="assets/images/home/about/pc/main_persona_universe.png" width="75%"/>
+                    </h1>
+                    <h1 class="mobile">
+                        <img src="assets/images/home/about/mo/main_persona_universe_m.png" width="80%"/>
+                    </h1>
+                    <!-- <h1>PERSONA UNIVERSE</h1> -->
                     <a class="btn btn-blank" href="http://bookae.net" target="_blank" role="button"><img src="assets/images/home/main/main_our_persona_m.png" width="67%"/></a>
                 </div>
                 <div class="item">
-                    <h1>WITH US TO INFINITY</h1>
+                    <h1 class="pc">
+                        <img src="assets/images/home/about/pc/main_with_us_together.png" width="75%"/>
+                    </h1>
+                    <h1 class="mobile">
+                        <img src="assets/images/home/about/mo/main_with_us_together_m.png" width="80%"/>
+                    </h1>
+                    <!-- <h1>WITH US TO INFINITY</h1> -->
                     <a class="btn btn-blank" href="http://bookae.net" target="_blank" role="button"><img src="assets/images/home/main/main_what_we_do_m.png" width="67%"/></a>
                 </div>
             </div>
