--- a/src/app/pages/pc/layout/galaxy-layout.component.html
+++ b/src/app/pages/pc/layout/galaxy-layout.component.html
@@ -3,13 +3,13 @@
 <!-- Display loading image while page loads -->
 <div class="body">
     <!--========== BEGIN HEADER ==========-->
-    <header id="header" class="header-main">
+    <header id="header" class="header-main text-center">
         <!-- Begin Navbar -->
         <nav id="main-navbar" class="navbar navbar-default navbar-fixed-top" role="navigation">
             <!-- Classes: navbar-default, navbar-inverse, navbar-fixed-top, navbar-fixed-bottom, navbar-transparent. Note: If you use non-transparent navbar, set "height: 98px;" to #header -->
-            <div class="container">
+            <div class="container nav-container">
                 <!-- Brand and toggle get grouped for better mobile display -->
-                <div class="navbar-header">
+                <div class="navbar-header navbar-expand-custom">
                     <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                         <span class="sr-only">Toggle navigation</span>
                         <span class="icon-bar"></span>
